# letterboxd-recommender

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy.yml
docs/: DEPLOYMENT.md  STATUS.md  WORKLOG.md
docs/agent/: DECISIONS.md  KNOWN_ISSUES.md  NEXT_TASKS.md  NOW.txt  PROJECT_STATE.md  SCOPE.md  TASKGRAPH.yaml  TASKSTATE.yaml  TRACE.jsonl  TRACE.md
src/letterboxd_recommender/: __init__.py
src/letterboxd_recommender/api/: app.py  rate_limit.py  routes.py  session.py
src/letterboxd_recommender/core/: dataframe.py  export_import.py  film_metadata.py  infographic.py  letterboxd_ingest.py  nlp.py  recommender.py  schemas.py
tests/: test_cache.py  test_cors.py  test_dataframe.py  test_e2e_smoke.py  test_evaluate.py  test_export_import.py  test_film_metadata.py  test_health.py  test_infographic.py  test_ingest.py  test_letterboxd_rss_parse.py  test_nlp_parser.py  test_rate_limit.py  test_recommend.py  test_recommender_constraints.py  test_recommender_ranking.py  test_report.py  test_session_exclusion.py  test_session_persistence.py  test_ui.py
